--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,2 +1,21 @@
-@import 'globals';
-@import './base/base';
+/* Abstracts */
+@import 'abstracts/variables';
+@import 'abstracts/functions';
+@import 'abstracts/mixins';
+
+/* Vendors */
+@import 'vendors/bootstrap';
+@import 'vendors/normalize';
+
+/* Base */
+@import 'base/base';
+@import 'base/helpers';
+@import 'base/typography';
+@import 'base/fonts';
+
+/* Layout */
+@import 'layout/main';
+
+/* Themes */
+@import 'themes/dark';
+@import 'themes/light';
