Welcome title and subtitle styles

--- a/src/styles/base/_fonts.scss
+++ b/src/styles/base/_fonts.scss
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: 'Ampersand';
+  font-family: 'Ampersand-bold';
   src: url('https://uploads-ssl.webflow.com/5e1e29388e0a4f467dbe0cf1/60048bb298c87b21b884d03f_Ampersand-Bold.woff2') format('woff2');
   font-weight: 700;
   font-style: normal;
@@ -7,7 +7,7 @@
 }
 
 @font-face {
-  font-family: 'Ampersand';
+  font-family: 'Ampersand-light';
   src: url('https://uploads-ssl.webflow.com/5e1e29388e0a4f467dbe0cf1/60048bb2da7fb7f568f40b38_Ampersand-Regular.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
