--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,5 +1,6 @@
 html {
   box-sizing: border-box;
+  font-size: 100%;
 }
 
 body {
@@ -10,4 +11,24 @@ body {
 *::before,
 *::after {
   box-sizing: inherit;
+}
+
+p,
+h1,
+h2,
+h3 {
+}
+
+h1 {
+  font-size: 3.75rem;
+  font-family: 'Ampersand-light';
+}
+
+h2 {
+  font-size: 2.5rem;
+  font-family: 'Ampersand-light';
+}
+
+h3 {
+  font-size: 1.5rem;
 }
