Work page mobile responsive

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -13,22 +13,6 @@ body {
   box-sizing: inherit;
 }
 
-p,
-h1,
-h2,
-h3 {
-}
-
-h1 {
-  font-size: 3.75rem;
-  font-family: 'Ampersand-light';
-}
-
-h2 {
-  font-size: 2.5rem;
-  font-family: 'Ampersand-light';
-}
-
-h3 {
-  font-size: 1.5rem;
+img {
+  width: 100%;
 }
