--- a/src/styles/base/_fonts.scss
+++ b/src/styles/base/_fonts.scss
@@ -13,3 +13,6 @@
   font-style: normal;
   font-display: block;
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Thasadith&display=swap');
