Contact and footer mobile responsive

--- a/src/styles/components/Contact.scss
+++ b/src/styles/components/Contact.scss
@@ -1,3 +1,60 @@
 .contact {
-  height: 100vh;
+  padding-top: 175px;
+
+  &__title {
+    padding-bottom: 100px;
+  }
+
+  &__button {
+    cursor: pointer;
+    font-weight: 500;
+    padding: 10px 15px;
+    color: white;
+    border: 2px solid white;
+    border-radius: 10px;
+    background: transparent;
+    transition: all 400ms ease-in-out;
+
+    &:hover {
+      color: #202020;
+      background-color: white;
+    }
+  }
+}
+
+.form {
+  padding-bottom: 100px;
+
+  input {
+    width: 100%;
+  }
+
+   textarea {
+     border-radius: 0;
+   }
+
+  input,
+  textarea {
+    margin-bottom: 30px;
+    padding-bottom: 10px;
+    border: 0;
+    color: white;
+    border-bottom: 1px solid hsla(0, 0%, 100%, 0.2);
+    background-color: transparent;
+    transition: all 500ms ease-in-out;
+
+
+    &:focus {
+      box-shadow: 0;
+      color: white; 
+      border-bottom: 1px solid hsla(0, 0%, 100%, 1);
+      outline: none;
+      background-color: transparent;
+    }
+  }
+}
+
+// Override vendors
+.form-control:focus {
+  box-shadow: none;
 }
