--- a/src/styles/base/_fonts.scss
+++ b/src/styles/base/_fonts.scss
@@ -14,5 +14,5 @@
   font-display: block;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Thasadith&display=swap');
+// https://fonts.google.com/specimen/Thasadith
+@import url('https://fonts.googleapis.com/css2?family=Thasadith:wght@400;700&display=swap');
