--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -1,4 +1,5 @@
 body {
+  color: white;
   font-size: 1rem;
   font-family: 'Thasadith', sans-serif;
 }
@@ -19,6 +20,7 @@ h3 {
 }
 
 a {
+  color: white;
   font-size: 1rem;
   font-family: 'Ampersand-light';
 }
