--- a/src/styles/components/Welcome.scss
+++ b/src/styles/components/Welcome.scss
@@ -21,3 +21,19 @@
     bottom: -3px;
   }
 }
+
+.next {
+  font-family: serif;
+  background-color: black;
+  transform: scale(2.5);
+  position: absolute;
+  bottom: 50px;
+  right: 50px;
+  filter: invert(1);
+  height: 16px;
+  border-radius: 50%;
+
+  svg {
+    margin-bottom: 2px;
+  }
+}
