--- a/src/styles/base/_helpers.scss
+++ b/src/styles/base/_helpers.scss
@@ -2,3 +2,14 @@
   padding-left: 30px;
   padding-right: 30px;
 }
+
+modal {
+
+  &--open {
+    overflow-y: hidden;
+  }
+
+  &--closed {
+    overflow-y: scroll;
+  }
+}
