Welcome page responsive

--- a/src/styles/components/ProjectCard.scss
+++ b/src/styles/components/ProjectCard.scss
@@ -2,9 +2,21 @@
   color: white;
   padding-bottom: 100px;
 
+  @include breakpoint-up(medium) {
+    padding-bottom: 150px;
+  }
+
+  @include breakpoint-up(large) {
+    display: flex;
+  }
+
   &__info {
     padding-top: 60px;
     padding-left: 10%;
+
+    @include breakpoint-up(medium) {
+      padding-left: 120px;
+    }
   }
   
   &__desc {
@@ -14,5 +26,6 @@
 }
 
 .img {
+  min-width: 60%;
   cursor: pointer;
 }
