--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -5,7 +5,6 @@ html {
 }
 
 body {
-  background-color: #202020;
   margin: 0;
 }
 
@@ -17,4 +16,5 @@ body {
 
 img {
   width: 100%;
+  height: 160px;
 }
