--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -7,20 +7,37 @@ body {
 h1 {
   font-size: 3.75rem;
   font-family: 'Ampersand-light';
+
+  @include breakpoint-up(medium) {
+    font-size: 6rem;
+  }
+
+  @include breakpoint-up(large) {
+    font-size: 7rem;
+  }
+
+  @include breakpoint-up(xlarge) {
+    font-size: 8.5rem;
+  }
 }
 
 h2 {
-  font-size: 2.5rem;
-  font-family: 'Ampersand-light';
-}
-
-h3 {
-  font-size: 1.5rem;
-  font-family: 'Ampersand-light';
-}
-
-a {
-  color: white;
   font-size: 1rem;
   font-family: 'Ampersand-light';
+
+  @include breakpoint-up(medium) {
+    font-size: 1.5rem;
+  }
+}
+
+a,
+h3,
+.navbar__link {
+  color: white;
+  font-size: 0.875rem;
+  font-family: 'Ampersand-light';
+
+  @include breakpoint-up(medium) {
+    font-size: 1.3rem;
+  }
 }
