--- a/src/styles/components/Navbar.scss
+++ b/src/styles/components/Navbar.scss
@@ -4,9 +4,36 @@
   padding: 55px 30px 0 30px;
   width: 100%;
   justify-content: end;
-  font-size: 1rem;
+  background: linear-gradient(180deg, #000, rgba(22, 22, 22, 0));
+
+  @include breakpoint-up(medium) {
+    padding-right: 65px;
+  }
+
+  @include breakpoint-up(xlarge) {
+    padding-right: 200px;
+  }
+
+  span {
+    cursor: pointer;
+    font-family: 'Ampersand-light', serif;
+  }
 
   &__link {
     margin-left: 16px;
+
+    &:hover {
+      text-decoration: none;
+      color: white;
+    }
+
+    @include breakpoint-up(medium) {
+      margin-left: 30px;
+    }
   }
+}
+
+.resume {
+  display: flex;
+  align-items: center;
 }
