Contact page responsive

--- a/src/styles/components/ProjectCard.scss
+++ b/src/styles/components/ProjectCard.scss
@@ -1,13 +1,18 @@
 .projectcard {
   color: white;
-  padding-bottom: 100px;
+  margin-bottom: 100px;
 
   @include breakpoint-up(medium) {
-    padding-bottom: 150px;
+    margin-bottom: 150px;
   }
 
   @include breakpoint-up(large) {
     display: flex;
+
+    &:nth-child(even) {
+      flex-direction: row-reverse;
+      justify-content: space-between;
+    }
   }
 
   &__info {
@@ -16,6 +21,11 @@
 
     @include breakpoint-up(medium) {
       padding-left: 120px;
+    }
+
+    @include breakpoint-up(large) {
+      padding-top: 0;
+      padding-left: 60px;
     }
   }
   
