--- a/src/styles/components/Contact.scss
+++ b/src/styles/components/Contact.scss
@@ -1,8 +1,28 @@
 .contact {
   padding-top: 175px;
 
+  @include breakpoint-up(medium) {
+    padding-top: 265px;
+  }
+
   &__title {
     padding-bottom: 100px;
+    padding-left: 30px;
+
+    @include breakpoint-up(medium) {
+      padding-bottom: 130px;
+      padding-left: 65px;
+      padding-right: 65px;
+    }
+
+    @include breakpoint-up(large) {
+      padding-bottom: 150px;
+    }
+
+    @include breakpoint-up(xlarge) {
+      padding-left: 200px;
+      padding-right: 200px;
+    }
   }
 
   &__button {
@@ -24,6 +44,11 @@
 
 .form {
   padding-bottom: 100px;
+  max-width: 720px;
+
+  @include breakpoint-up(medium) {
+    padding-bottom: 150px;
+  }
 
   input {
     width: 100%;
@@ -36,10 +61,10 @@
   input,
   textarea {
     margin-bottom: 30px;
-    padding-bottom: 10px;
-    border: 0;
+    padding: 10px;
     color: white;
-    border-bottom: 1px solid hsla(0, 0%, 100%, 0.2);
+    border: 1px solid hsla(0, 0%, 100%, 0.2);
+    border-radius: 10px;
     background-color: transparent;
     transition: all 500ms ease-in-out;
 
@@ -47,7 +72,7 @@
     &:focus {
       box-shadow: 0;
       color: white; 
-      border-bottom: 1px solid hsla(0, 0%, 100%, 1);
+      border: 1px solid hsla(0, 0%, 100%, 1);
       outline: none;
       background-color: transparent;
     }
