--- a/src/styles/components/Work.scss
+++ b/src/styles/components/Work.scss
@@ -1,8 +1,8 @@
 .work {
-  padding-top: 175px;
+  margin-bottom: 325px;
 
   @include breakpoint-up(medium) {
-    padding-top: 300px;
+    margin-bottom: 415px;
   }
 
   &__title {
@@ -23,6 +23,27 @@
 
     @include breakpoint-up(medium) {
       padding-bottom: 130px;
+    }
+
+    &__arrow {
+      transform: rotate(45deg) scale(0.6);
+        margin-bottom: -15px;
+        margin-left: -10px;
+
+      @include breakpoint-up(medium) {
+        margin-bottom: -30px;
+        margin-left: -20px;
+      }
+
+      @include breakpoint-up(large) {
+        margin-bottom: -35px;
+        margin-left: -25px;
+      }
+
+      @include breakpoint-up(xlarge) {
+        margin-bottom: -40px;
+        margin-left: -30px;
+      }
     }
   }
 }
