--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -19,12 +19,13 @@
 @import 'themes/light';
 
 /* Components */
-@import 'components/Contact.scss';
-@import 'components/Footer.scss';
-@import 'components/Navbar.scss';
-@import 'components/ProjectCard.scss';
-@import 'components/ProjectModal.scss';
-@import 'components/Projects.scss';
-@import 'components/ShowDate.scss';
-@import 'components/Welcome.scss';
-@import 'components/Work.scss';
+@import 'components/Contact';
+@import 'components/Footer';
+@import 'components/Navbar';
+@import 'components/ProjectCard';
+@import 'components/ProjectModal';
+@import 'components/Projects';
+@import 'components/ShowDate';
+@import 'components/Welcome';
+@import 'components/Work';
+@import 'components/Loading';
