Add scroll progress bar

--- a/src/styles/base/_fonts.scss
+++ b/src/styles/base/_fonts.scss
@@ -16,3 +16,9 @@
 
 // https://fonts.google.com/specimen/Thasadith
 @import url('https://fonts.googleapis.com/css2?family=Thasadith:wght@400;700&display=swap');
+
+// https://fonts.google.com/specimen/Maven+Pro 
+@import url('https://fonts.googleapis.com/css2?family=Maven+Pro&display=swap');
+
+// https://fonts.google.com/specimen/Josefin+Sans
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;300;400&family=Maven+Pro&family=Thasadith&display=swap');
