--- a/src/styles/components/Loading.scss
+++ b/src/styles/components/Loading.scss
@@ -33,7 +33,7 @@
   &__inner {
     height: 100%;
     width: 100%;
-    background: #202020;
+    background: #fff;
     animation: loading__inner 1500ms ease-in-out;
   }
 }
