--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -1,7 +1,7 @@
 body {
   color: white;
   font-size: 1rem;
-  font-family: 'Thasadith', sans-serif;
+  font-family: 'Maven Pro', sans-serif;
 }
 
 h1 {
