--- a/src/styles/components/Footer.scss
+++ b/src/styles/components/Footer.scss
@@ -12,11 +12,10 @@
   }
 
   &__link {
-    font-weight: 700;
     font-size: 1.2rem;
     display: grid;
     place-items: center;
-    font-family: 'Thasadith', sans-serif;
+    font-family: 'Maven Pro', sans-serif;
     color: black;
     width: 50%;
     padding: 20px;
