--- a/src/styles/components/ProjectModal.scss
+++ b/src/styles/components/ProjectModal.scss
@@ -1,28 +1,72 @@
 .projectmodal {
   display: flex;
   flex-direction: column;
-  z-index: 11;
+  z-index: 20;
   position: fixed;
   height: 100%;
   width: 100%;
   background-color: hsla(0, 0%, 0%, 1);
 
+  @include breakpoint-up(medium) {
+    font-size: 1.2rem;
+
+    // fix
+    p {
+      font-size: 1.2rem;
+    }
+  }
+
+  @include breakpoint-up(large) {
+    flex-direction: row;
+  }
+
+  @include breakpoint-up(xlarge) {
+
+  }
+  
+  &__desc {
+    padding-left: 60px;
+  }
+
   &__image {
     img {
       max-height: 30vh;
+      width: 100%;
     }
   }
 
   &__content {
-
+    padding-top: 60px;
   }
 
   &__title {
+    text-align: center;
+    padding-bottom: 25px;
 
+    @include breakpoint-up(medium) {
+      text-align: left;
+    }
   }
 
   &__exit {
     position: absolute;
+    border: 0;
+    background: transparent;
+    cursor: pointer;
+    top: 5px;
+    right: 10px;
+    padding: 0;
+
+    @include breakpoint-up(medium) {
+      top: 10px;
+      right: 15px;
+    }
+  }
+
+  &__description,
+  &__tech {
+    padding-bottom: 25px;
+
   }
 
   &__description {
@@ -30,14 +74,21 @@
   }
 
   &__tech {
-
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 1rem;
   }
 
-  &__liveurl {
+  &__url {
+    display: flex;
+    justify-content: space-around;
 
-  }
+    &__live {
 
-  &__sourceurl {
+    }
 
+    &__source {
+
+    }
   }
 }
