--- a/src/styles/components/ProjectModal.scss
+++ b/src/styles/components/ProjectModal.scss
@@ -1,15 +1,10 @@
 .projectmodal {
-  display: flex;
-  flex-direction: column;
   z-index: 20;
   position: fixed;
-  height: 100%;
-  width: 100%;
-  background-color: hsla(0, 0%, 0%, 1);
+  overflow: hidden;
 
   @include breakpoint-up(medium) {
     font-size: 1.2rem;
-
     // fix
     p {
       font-size: 1.2rem;
@@ -17,60 +12,103 @@
   }
 
   @include breakpoint-up(large) {
-    flex-direction: row;
+    font-size: 1.3rem;
+    // fix
+    p {
+      font-size: 1.3rem;
+    }
   }
 
   @include breakpoint-up(xlarge) {
-
-  }
-  
-  &__desc {
-    padding-left: 60px;
   }
 
   &__image {
+    height: 100vh;
+    width: 100vw;
+
     img {
-      max-height: 30vh;
-      width: 100%;
+      height: 100%;
+
+      @include breakpoint-up(large) {
+        position: absolute;
+        right: 0;
+        background-size: contain;
+      }
     }
   }
 
   &__content {
+    overflow-y: scroll;
+    position: absolute;
+    bottom: 0;
+    height: 70%;
+    width: 100vw;
     padding-top: 60px;
+    background-color: black;
+    padding: 60px 30px;
+
+    @include breakpoint-up(medium) {
+      overflow-y: hidden;
+      padding: 60px 70px;
+    }
+
+    @include breakpoint-up(large) {
+      position: absolute;
+      left: 0;
+      height: 100%;
+      width: 50%;
+    }
+
+    @include breakpoint-up(xlarge) {
+      padding: 75px 100px;
+    }
   }
 
   &__title {
     text-align: center;
-    padding-bottom: 25px;
 
     @include breakpoint-up(medium) {
       text-align: left;
     }
+
+    @include breakpoint-up(xlarge) {
+      font-size: 2rem;
+    }
   }
 
   &__exit {
+    z-index: 25;
     position: absolute;
     border: 0;
     background: transparent;
     cursor: pointer;
-    top: 5px;
-    right: 10px;
+    top: 15px;
+    right: 20px;
     padding: 0;
 
     @include breakpoint-up(medium) {
-      top: 10px;
-      right: 15px;
+      top: 40px;
+      right: 45px;
     }
   }
 
+  &__title,
   &__description,
   &__tech {
     padding-bottom: 25px;
 
+    @include breakpoint-up(medium) {
+      padding-bottom: 45px;
+    }
+
+    @include breakpoint-up(large) {
+      padding-bottom: 65px;
+    }
   }
 
   &__description {
-
+    padding-left: 25px;
+    padding-right: 25px;
   }
 
   &__tech {
@@ -82,6 +120,7 @@
   &__url {
     display: flex;
     justify-content: space-around;
+    margin-bottom: 30px;
 
     &__live {
 
