--- a/src/styles/components/Welcome.scss
+++ b/src/styles/components/Welcome.scss
@@ -11,6 +11,7 @@
 .hero {
   padding-top: 130px;
   padding-left: 30px;
+  overflow: hidden;
 
   @include breakpoint-up(medium) {
     padding-left: 65px;
@@ -23,9 +24,16 @@
   @include breakpoint-up(xlarge) {
     padding-left: 200px;
   }
+
+  h1 {
+    animation: title 1500ms ease forwards;
+  }
 }
 
 .job {
+  transform: translateY(150%);
+  animation: title 1s ease forwards;
+  animation-delay: 1100ms;
 
   @include breakpoint-up(medium) {
     margin-left: 215px;
@@ -53,12 +61,15 @@
 }
 
 .next {
+  opacity: 0;
   cursor: pointer;
   position: absolute;
   bottom: 35px;
   right: 35px;
   transform: rotate(180deg);
   filter: contrast(0) brightness(3);
+
+  animation: next-arrow 2s ease forwards;
 
   @include breakpoint-up(medium) {
     bottom: 50px;
@@ -75,5 +86,27 @@
     bottom: 65px;
     left: unset;
     right: 200px;
+  }
+}
+
+@keyframes next-arrow {
+  from {
+    transform: translateX(150%) rotate(180deg); 
+    opacity: 0;
+  }
+
+  to {
+    transform: translateX(0%) rotate(180deg); 
+    opacity: 1;
+  }
+}
+
+@keyframes title {
+  from {
+    transform: translateY(150%); 
+  }
+
+  to {
+    transform: translateY(0%); 
   }
 }
