--- a/src/styles/components/ProjectCard.scss
+++ b/src/styles/components/ProjectCard.scss
@@ -16,8 +16,12 @@
   }
 
   img {
-    height: 160px;
+    height: 0;
     width: 100%;
+  }
+
+  &__title {
+    transform: translateY(150%);
   }
 
   &__info {
@@ -35,12 +39,14 @@
   }
   
   &__desc {
+    transform: translateY(150%);
     padding-left: 60px;
     padding-top: 25px;
   }
 }
 
-.img {
+// Fix name
+.img__container {
   min-width: 60%;
   cursor: pointer;
 }
