--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,7 @@
 /* Abstracts */
 @import 'abstracts/variables';
 @import 'abstracts/mixins';
+@import 'abstracts/animations';
 
 /* Vendors */
 @import 'vendors/bootstrap';
