--- a/src/styles/base/_helpers.scss
+++ b/src/styles/base/_helpers.scss
@@ -37,22 +37,60 @@ modal {
   &__image {
     animation: image 1s ease forwards;
   }
+
+  &__form {
+    animation: form 1s ease forwards;
+  }
 }
 
 .disabled {
   &__arrow {
     animation: arrow 1s ease forwards reverse;
   }
-
-  &__text {
-    animation: text 1s ease forwards reverse;
-  }
-
-  &__image {
-    animation: image 1s ease forwards reverse;
-  }
 }
 
 .overflow-h {
   overflow: hidden;
+  
+  &-ib {
+    display: inline-block;
+    overflow: hidden;
+  }
+}
+
+.hidden {
+
+  &__welcome {
+    &__text {
+      transform: translateY(150%);
+    }
+
+    &__circle {
+
+    }
+  }
+
+  &__work {
+    &__text {
+      transform: translateY(150%);
+    }
+
+    &__image {
+      height: 0;
+    }
+  }
+
+  &__contact {
+    &__text {
+      transform: translateY(150%);
+    }
+
+    &__form {
+      width: 0;
+    }
+  }
+
+  &__footer {
+
+  }
 }
