--- a/src/styles/components/ProjectCard.scss
+++ b/src/styles/components/ProjectCard.scss
@@ -15,13 +15,13 @@
     }
   }
 
-  img {
-    height: 0;
-    width: 100%;
+  &__img__container {
+    min-width: 60%;
+    cursor: pointer;
   }
 
-  &__title {
-    transform: translateY(150%);
+  img {
+    width: 100%;
   }
 
   &__info {
@@ -39,14 +39,7 @@
   }
   
   &__desc {
-    transform: translateY(150%);
     padding-left: 60px;
     padding-top: 25px;
   }
-}
-
-// Fix name
-.img__container {
-  min-width: 60%;
-  cursor: pointer;
 }
