--- a/src/styles/components/ShowDate.scss
+++ b/src/styles/components/ShowDate.scss
@@ -27,7 +27,7 @@
     }
 
     &__progress {
-      animation: circle 500ms ease-in-out;
+      animation: circle 3000ms ease-in-out;
       stroke-dasharray: 315;
       stroke-dashoffset: 70;
       transform-origin: 50% 50%;
@@ -46,7 +46,6 @@
     &__day,
     &__about {
       position: absolute;
-      overflow: hidden;
     }
 
     &__month {
@@ -56,6 +55,8 @@
     }
 
     &__day {
+      height: 50px;
+      background: black;
       right: -5px;
       top: 12px;
       font-size: 2.5rem;
@@ -69,10 +70,4 @@
       font-size: 0.6rem;
     }
   }
-
-
-}
-
-.animated {
-  animation: title 1s ease forwards;
 }
