--- a/src/styles/components/Contact.scss
+++ b/src/styles/components/Contact.scss
@@ -1,4 +1,10 @@
 .contact {
+  padding-top: 125px;
+
+  @include breakpoint-up(medium) {
+    padding-top: 200px;
+  }
+
 
   &__title {
     padding-bottom: 100px;
