--- a/src/styles/components/Welcome.scss
+++ b/src/styles/components/Welcome.scss
@@ -1,10 +1,10 @@
 .welcome {
   color: #fff;
   height: 100vh;
-  margin-bottom: 175px;
+  padding-bottom: 50px;
 
   @include breakpoint-up(medium) {
-    margin-bottom: 300px;
+    padding-bottom: 100px;
   }
 }
 
@@ -61,7 +61,7 @@
   @include breakpoint-up(medium) {
     bottom: 50px;
     right: 50px;
-    transform: rotate(180deg) scale(1.2);
+    transform: scale(1.2);
   }
 
   @include breakpoint-up(large) {
