--- a/src/styles/components/Welcome.scss
+++ b/src/styles/components/Welcome.scss
@@ -52,26 +52,30 @@
 }
 
 .next {
-  cursor: pointer;
   position: absolute;
-  bottom: 35px;
-  right: 35px;
-  filter: contrast(0) brightness(3);
+  bottom: 55px;
+  left: 30px;
+  transform: scale(1.5);
 
   @include breakpoint-up(medium) {
-    bottom: 50px;
-    right: 50px;
-    transform: scale(1.2);
+    left: unset;
+    right: 65px;
+    bottom: 65px;
+    transform: scale(1.7);
   }
 
   @include breakpoint-up(large) {
-    bottom: 65px;
+    right: unset;
     left: 65px;
+    bottom: 65px;
   }
 
   @include breakpoint-up(xlarge) {
+    left: 200px;
     bottom: 65px;
-    left: unset;
-    right: 200px;
   }
+
+    &__button {
+      cursor: pointer;
+    }
 }
