--- a/src/styles/base/_helpers.scss
+++ b/src/styles/base/_helpers.scss
@@ -1,6 +1,13 @@
 .container {
   padding-left: 30px;
   padding-right: 30px;
+
+  &__big {
+    padding-left: 0;
+    padding-right: 0;
+    max-width: 1440px;
+    margin: 0 auto;
+  }
 }
 
 .modal {
