Multiple changes Add gradient background Add footer link animations Remove contact form Add mailto link Fix padding Add AboutMe component

--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -4,7 +4,8 @@ body {
   font-family: 'Maven Pro', sans-serif;
 }
 
-h1 {
+h1,
+.contact__mail {
   font-size: 3rem;
   font-family: 'Ampersand-light';
 
