--- a/src/styles/themes/_dark.scss
+++ b/src/styles/themes/_dark.scss
@@ -1,3 +1,7 @@
 body {
-  background-color: #000000;
+   background: linear-gradient(
+    15deg,
+    hsl(0, 0%, 0%) 0%,
+    hsl(0, 0%, 5%) 51%,
+    hsl(0, 0%, 0%) 75%);
 }
