--- a/src/styles/themes/_dark.scss
+++ b/src/styles/themes/_dark.scss
@@ -1,7 +1,9 @@
 body {
-   background: linear-gradient(
-    15deg,
-    hsl(0, 0%, 0%) 0%,
-    hsl(0, 0%, 5%) 51%,
-    hsl(0, 0%, 0%) 75%);
+  background-color: #000000;
+  background-image: linear-gradient(
+    147deg,
+   hsl(0, 0%, 0%) 30%,
+   rgb(0, 20, 22) 60%,
+   hsl(283, 60%, 6%) 90%
+   );
 }
