--- a/src/styles/components/Loading.scss
+++ b/src/styles/components/Loading.scss
@@ -38,28 +38,7 @@
   }
 
   &__inner {
-   
-    background: linear-gradient(
-    hsla(183, 100%, 4%, 0.5) 30%,
-      transparent
-    );
+    background: white; 
     animation: loading__inner 1700ms ease-in-out;
-
-    &__a {
-      background: linear-gradient(
-        hsla(283, 60%, 6%, 0.5) 50%,
-        transparent
-      );
-      animation: loading__inner 1700ms ease-out;
-
-      &__b {
-        background: linear-gradient(
-          hsla(0, 0%, 100%, 0.01) 5%,
-          transparent
-        );
-        animation: loading__inner 1700ms ease-in;
-      }
-    }
-
   }
 }
