--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -49,3 +49,11 @@ h3 {
   padding: 0;
   margin: 0;
 }
+
+.projectmodal__url {
+  a {
+    color: white;
+    font-size: 1rem;
+    font-family: 'Maven Pro', sans-serif;
+  }
+}
