Add ProjectModal styles

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -7,5 +7,6 @@ $hero: 3.75rem;
 $breakpoints-up: (
   "medium": "40em",
   "large": "64em",
-  "xlarge": "87.5em"
+  "xlarge": "87.5em",
+  "uhd": "120em"
 );
