--- a/src/styles/components/Loading.scss
+++ b/src/styles/components/Loading.scss
@@ -32,8 +32,7 @@
   transform: rotate(180deg);
 
   &__inner,
-  &__inner__a,
-  &__inner__a__b {
+  &__inner__a {
     height: 100%;
     width: 100%;
   }
