--- a/src/styles/components/ProjectModal.scss
+++ b/src/styles/components/ProjectModal.scss
@@ -21,9 +21,6 @@
     }
   }
 
-  @include breakpoint-up(xlarge) {
-  }
-
   &__image {
     height: 100vh;
     width: 100vw;
@@ -107,6 +104,19 @@
       padding-bottom: 65px;
     }
   }
+
+  &__title,
+  &__description,
+  &__tech,
+  &__url {
+
+    @include breakpoint-up(uhd){
+      max-width: 30vw;
+      margin: 0 auto;
+    }
+  }
+
+
 
   &__description {
     padding-left: 25px;
