--- a/src/styles/components/ProjectCard.scss
+++ b/src/styles/components/ProjectCard.scss
@@ -18,10 +18,19 @@
   &__img__container {
     min-width: 60%;
     cursor: pointer;
+    overflow: hidden;
   }
 
   img {
     width: 100%;
+    object-fit: cover;
+    filter: grayscale(1);
+    transition: all 300ms ease-in-out;
+
+    &:hover {
+      transform: scale(1.1);
+      filter: grayscale(0);
+    }
   }
 
   &__info {
