--- a/src/styles/components/ProjectModal.scss
+++ b/src/styles/components/ProjectModal.scss
@@ -76,14 +76,23 @@
   }
 
   &__exit {
+    padding: 5px 20px;
+    border: 2px white solid;
+    border-radius: 7px;
+    background: black;
+    color: white;
     z-index: 25;
     position: absolute;
-    border: 0;
-    background: transparent;
     cursor: pointer;
     top: 15px;
     right: 20px;
-    padding: 0;
+    transition: all 300ms ease-in-out;
+
+    &:hover {
+      color: black;
+      background-color: white;
+
+    }
 
     @include breakpoint-up(medium) {
       top: 40px;
@@ -116,8 +125,6 @@
     }
   }
 
-
-
   &__description {
     padding-left: 25px;
     padding-right: 25px;
@@ -133,5 +140,18 @@
     display: flex;
     justify-content: space-around;
     margin-bottom: 30px;
+
+    &__live,
+    &__source {
+      border: 2px white solid;
+      padding: 5px 20px;
+      border-radius: 7px;
+      transition: all 300ms ease-in-out;
+
+      &:hover {
+        background-color: white;
+        color: black;
+      }
+    }
   }
 }
