--- a/src/styles/components/ShowDate.scss
+++ b/src/styles/components/ShowDate.scss
@@ -75,6 +75,7 @@
     }
 
     &__month {
+      right: 26px;
       z-index: 10;
       right: 1.9rem;
       font-family: 'Thasadith', sans-serif;
@@ -82,8 +83,8 @@
 
     &__day {
       height: 50px;
+      left: 93px;
       background: black;
-      right: -5px;
       top: 12px;
       font-size: 2.5rem;
       font-family: 'Josefin Sans', sans-serif;
