--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -4,6 +4,19 @@ body {
   font-family: 'Maven Pro', sans-serif;
 }
 
+.navbar__link {
+  font-size: 0.9rem;
+  font-family: "Maven Pro", sans-serif;
+
+  @include breakpoint-up(medium) {
+    font-size: 1.3rem;
+  }
+
+  @include breakpoint-up(large) {
+    font-family: 'Ampersand-light';
+  }
+}
+
 h1,
 .contact__mail {
   font-size: 3rem;
@@ -24,16 +37,19 @@ h1,
 
 h2 {
   font-size: 1rem;
-  font-family: 'Ampersand-light';
+  font-family: 'Maven Pro', sans-serif;
 
   @include breakpoint-up(medium) {
     font-size: 1.5rem;
   }
+
+  @include breakpoint-up(large) {
+    font-family: 'Ampersand-light';
+  }
 }
 
 a,
-h3,
-.navbar__link {
+h3 {
   color: white;
   font-size: 0.9rem;
   font-family: 'Ampersand-light';
