feat: improve images

--- a/src/styles/components/Welcome.scss
+++ b/src/styles/components/Welcome.scss
@@ -9,11 +9,12 @@
 }
 
 .hero {
+  line-height: 1;
   padding-top: 130px;
   padding-left: 30px;
 
-  .overflow-h:last-child {
-    padding-top: 10px;
+  h1 .overflow-h:last-child {
+    padding-top: 18px;
   }
 
   @include breakpoint-up(medium) {
@@ -53,8 +54,9 @@
   &__arrow {
     position: relative;
     fill: hsl(0, 0%, 100%);
-    bottom: -2px;
-    transform: scale(1.5) rotate(-45deg);
+    bottom: -8px;
+    right: -8px;
+    transform:rotate(-45deg);
   }
 }
 
