--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -1,7 +1,7 @@
 body {
   color: white;
   font-size: 1rem;
-  font-family: 'Maven Pro', sans-serif;
+  font-family: "Maven Pro", sans-serif;
 }
 
 .navbar__link {
@@ -13,15 +13,16 @@ body {
   }
 
   @include breakpoint-up(large) {
-    font-family: 'Ampersand-light';
+    font-family: "Ampersand-light";
   }
 }
 
 h1,
 .contact__mail {
   font-size: 3rem;
-  font-family: 'Ampersand-light';
-    font-weight: 300;
+  font-family: "Ampersand-light";
+  font-weight: 300;
+  width: fit-content;
 
   @include breakpoint-up(medium) {
     font-size: 6rem;
@@ -38,16 +39,16 @@ h1,
 
 h2 {
   font-size: 1rem;
-  font-family: 'Maven Pro', sans-serif;
+  font-family: "Maven Pro", sans-serif;
   font-weight: 500;
-    font-weight: 300;
+  font-weight: 300;
 
   @include breakpoint-up(medium) {
     font-size: 1.5rem;
   }
 
   @include breakpoint-up(large) {
-    font-family: 'Ampersand-light';
+    font-family: "Ampersand-light";
   }
 }
 
@@ -55,8 +56,8 @@ a,
 h3 {
   color: white;
   font-size: 0.9rem;
-  font-family: 'Ampersand-light';
-    font-weight: 300;
+  font-family: "Ampersand-light";
+  font-weight: 300;
 
   @include breakpoint-up(medium) {
     font-size: 1.3rem;
@@ -80,7 +81,7 @@ h3 {
   a {
     color: white;
     font-size: 1rem;
-    font-family: 'Maven Pro', sans-serif;
+    font-family: "Maven Pro", sans-serif;
 
     @include breakpoint-up(large) {
       font-size: 1.3rem;
