--- a/src/styles/components/ProjectCard.scss
+++ b/src/styles/components/ProjectCard.scss
@@ -18,17 +18,19 @@
   &__img__container {
     min-width: 60%;
     cursor: pointer;
-    overflow: hidden;
+    overflow-x: clip;
+    overflow-y: visible;
   }
 
   img {
     width: 100%;
     object-fit: cover;
+    object-position: top;
     filter: grayscale(1);
-    transition: all 300ms ease-in-out;
+    transition: transform 400ms ease-in-out, filter 400ms ease-in-out;
 
     &:hover {
-      transform: scale(1.1);
+      transform: scale(1.11);
       filter: grayscale(0);
     }
   }
@@ -46,7 +48,7 @@
       padding-left: 60px;
     }
   }
-  
+
   &__desc {
     padding-left: 60px;
     padding-top: 25px;
