fix: title issue

--- a/src/styles/components/ProjectCard.scss
+++ b/src/styles/components/ProjectCard.scss
@@ -18,8 +18,7 @@
   &__img__container {
     min-width: 60%;
     cursor: pointer;
-    overflow-x: clip;
-    overflow-y: visible;
+    overflow: clip;
   }
 
   img {
